# starting-ragchatbot-codebase

./: CLAUDE.md  frontend-changes.md  pyproject.toml  quality-check.sh
.claude/commands/: implement-feature.md
.playwright-mcp/: page-2026-04-17T10-44-30-118Z.yml
backend/: ai_generator.py  app.py  config.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  response_builders.py  test_ai_generator.py  test_api_endpoints.py  test_course_search_tool.py  test_rag_system.py
frontend/: index.html  script.js  style.css
